# aetherless

./: .gitignore  ARCHITECTURE.md  BENCHMARK.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  WALKTHROUGH.md  aetherless.example.yaml
.github/workflows/: bench.yml  ci.yml  docs.yml  release.yml  security.yml
aetherless-cli/: Cargo.toml
aetherless-cli/src/: cpu_affinity.rs  gateway.rs  main.rs  metrics.rs  warm_pool.rs
aetherless-cli/src/commands/: deploy.rs  down.rs  list.rs  mod.rs  stats.rs  up.rs  validate.rs
aetherless-cli/src/tui/: app.rs  mod.rs
aetherless-core/: Cargo.toml
aetherless-core/src/: autoscaler.rs  cluster.rs  config.rs  error.rs  lib.rs  registry.rs  state.rs  stats.rs  storage.rs  types.rs
aetherless-core/src/criu/: mod.rs  process.rs  snapshot.rs
aetherless-core/src/shm/: mod.rs  region.rs  ring_buffer.rs  validator.rs
aetherless-core/tests/: integration_tests.rs
aetherless-ebpf/: Cargo.toml  README.md  build_bpf.sh
aetherless-ebpf/src/: lib.rs  main.rs
aetherless-ebpf/src/bpf/: xdp_redirect.c
bench/: Dockerfile  compare.sh  setup_env.sh
bench/results/: .gitkeep
benchmark/: Cargo.toml  README.md
benchmark/benches/: cold_start.rs  e2e_latency.rs  ipc_throughput.rs  ring_buffer.rs  smp_scaling.rs
benchmark/data/: .gitkeep  cold_start_baseline_2025-12-27T14-21-51Z.json  ipc_baseline_2025-12-27T14-21-45Z.json  platform_comparison_2025-12-27T14-29-48Z.json
benchmark/scripts/: cold_start_baseline.py  http_ipc_baseline.py  platform_comparison.py  run_all.sh
benchmark/src/: harness.rs  lib.rs  metrics.rs  reporter.rs
data/: ring_buffer_2025-12-27T12-50-07Z.json  ring_buffer_2025-12-27T14-21-08Z.json  ring_buffer_2025-12-27T14-29-48Z.json
examples/: README.md  hello.py  hello.yaml  multi_service.yaml  rest_api.py  rest_api.yaml
scripts/: run_benchmarks.sh  verify_all.sh  verify_e2e.sh  verify_scaling.sh
