[workspace]
resolver = "2"
members = [
    "aetherless-core",
    "aetherless-ebpf",
    "aetherless-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Aetherless Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Concurrent data structures
dashmap = "5.5"

# Serialization & validation
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Error handling (custom enums, no anyhow)
thiserror = "1.0"

# System primitives
libc = "0.2"
nix = { version = "0.27", features = ["fs", "mman", "process", "signal", "socket"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# TUI
ratatui = "0.25"
crossterm = "0.27"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Checksum for payload validation
crc32fast = "1.3"
