[workspace]
resolver = "2"
members = [
    "aetherless-core",
    "aetherless-ebpf",
    "aetherless-cli",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Ankit Pandey"]
repository = "https://github.com/yourusername/aetherless"
homepage = "https://github.com/yourusername/aetherless"
description = "High-performance serverless function orchestrator with eBPF, CRIU, and zero-copy IPC"
keywords = ["serverless", "orchestrator", "ebpf", "criu", "zero-copy"]
categories = ["command-line-utilities", "network-programming", "concurrency"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Concurrent data structures
dashmap = "6.1"

# Serialization & validation
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"

# Error handling (custom enums, no anyhow)
thiserror = "2.0.17"

# System primitives
libc = "0.2.172"
nix = { version = "0.29.0", features = ["fs", "mman", "process", "signal", "socket"] }

# CLI
clap = { version = "4.5.53", features = ["derive"] }

# TUI
ratatui = "0.29.0"
crossterm = "0.28.1"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Checksum for payload validation
crc32fast = "1.4.2"

# Testing
tempfile = "3.19.1"
