[package]
name = "aetherless-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI tool for Aetherless serverless platform"

[[bin]]
name = "aether"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }

aetherless-core = { path = "../aetherless-core" }
serde_json = "1.0.148"
prometheus = "0.14.0"
lazy_static = "1.5.0"
uuid = { version = "1.19.0", features = ["v4"] }
